modified _bottom_window.scss to stop cutting off ms image in max view [fixed #92930210]

--- a/app/assets/stylesheets/_bottom_window.scss
+++ b/app/assets/stylesheets/_bottom_window.scss
@@ -2,14 +2,13 @@
 	top: 60%; 
 	height: 40%; 
 	width: 100%; 
-	background-color: $dark-color; 
-	margin-bottom: 50px; 
+
 	padding-bottom: 50px; 
-	 
+	background-color: $dark-color; 
 	display: none;
 	overflow: scroll;}
 
-#lbp-bottom-widow-container{}
+#lbp-bottom-window-container{margin-bottom: 50px;}
 
 #lbp-bottom-window-nav-bar{border-bottom: 2px solid $light-color; margin-bottom: 5px;}
 
